--- a/src/server/backend/plugins/others/poll/html/voting.html
+++ b/src/server/backend/plugins/others/poll/html/voting.html
@@ -62,10 +62,20 @@
             .entry {
                 border: black 2px solid;
                 padding: 1% 10%;
+                width: 40vw;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
             }
 
             .selected {
                 background-color: green;
+            }
+
+            .comment {
+                width: 50%;
+                text-align: center;
             }
         </style>
     </head>
@@ -73,7 +83,7 @@
         <div class="content" id="app">
             <div v-if="votingDetails.display">
                 <h1>Voting on {{ votingDetails.display ?? 'untitled' }}</h1>
-                <p v-if="votingDetails.description">{{ votingDetails.description }}</p>
+                <p v-if="votingDetails.description" class="comment">{{ votingDetails.description }}</p>
                 <div style="margin-bottom: 1%;" v-if="votingDetails.allowAdding">
                     <button onclick="location.href = '/'">Back to website</button>
                     <button @click="addSuggestion();">Add suggestion</button>
