--- a/src/server/backend/plugins/others/poll/html/voting.html
+++ b/src/server/backend/plugins/others/poll/html/voting.html
@@ -77,6 +77,15 @@
                 width: 50%;
                 text-align: center;
             }
+
+            .wrapper {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                margin-bottom: 5vh;
+            }
         </style>
     </head>
     <body>
